--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Album example for Bootstrap</title>
+    <title>Hamza's Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -21,16 +21,16 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Hamza Akbar</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Hamza Akbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="#">Twitter</a>
-                <a class="nav-item nav-link" href="#">Resume</a>
-                <a class="nav-item nav-link active" href="#">Blog</a>
+                <a class="nav-item nav-link" href="https://twitter.com/ihamzakbar" target="_blank">Twitter</a>
+                <a class="nav-item nav-link" href="{% static '201010-SAMPLE-RESUME-FORMAT.pdf' %}">Resume</a>
+                <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
             </div>
         </div>
     </nav>
@@ -53,8 +53,8 @@
                              src="{{ blog.image.url }}"
                              alt="Card image cap">
                         <div class="card-body">
-                            <a href=""><h3 class="card-text">{{ blog.title }}</h3></a>
-                            <p class="card-text">{{ blog.summary}}</p>
+                            <a href="{% url 'detail' blog.id %}"><h3 class="card-text">{{ blog.title }}</h3></a>
+                            <p class="card-text">{{ blog.summary }}</p>
                             <hr>
                             <p class="card-text">{{ blog.datetime_pretty }}</p>
                         </div>
